--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nf start"
   },
   "author": "",
   "license": "ISC",
@@ -20,11 +20,11 @@
     "express": "^4.16.3",
     "foreman": "^3.0.1",
     "lodash": "^4.17.15",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.9.17",
     "mongoose-encryption": "^2.0.2",
+    "nodemailer": "^6.4.8",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "throng": "^4.0.0"
-  },
-  "scripts": {
-    "start": "nf start"
   }
 }
